--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,27 @@
             android:onClick="carrier_method"
             android:text="@string/btnCV" />
 
-        <WebView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/viewbtnDownload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:onClick="updateDatabase"
+        android:text="@string/btnDownload"
+        app:layout_constraintTop_toBottomOf="@+id/ButtonsCalculator"
+        tools:layout_editor_absoluteX="-16dp" />
+
+    <ProgressBar
+        android:id="@+id/viewProgress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
+        android:max="100"
+        android:progress="0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewbtnDownload" />
 </androidx.constraintlayout.widget.ConstraintLayout>
