--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -6,25 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".Calculator">
 
-    <LinearLayout
-        android:id="@+id/viewShipfu"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/viewLblDownload"
+        <LinearLayout
+            android:id="@+id/viewShipfu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btnDownload" />
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/viewBtnText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="testButton"
-            android:text="@string/btnDD" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/viewLblDownload"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/btnDownload" />
+
+            <Button
+                android:id="@+id/viewBtnText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="testButton"
+                android:text="@string/btnDD" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/viewShipSelector"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
