Pre-(not yet)-building list ("Works")

--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -24,13 +24,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="testButton"
+                android:onClick="selectButton"
                 android:text="@string/btnDD" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/viewShipSelector"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
 
         </LinearLayout>
     </ScrollView>
