--- a/app/src/main/res/layout/activity_ship_selection.xml
+++ b/app/src/main/res/layout/activity_ship_selection.xml
@@ -11,16 +11,10 @@
         android:layout_width="407dp"
         android:layout_height="680dp"
         android:layout_marginBottom="15dp"
+        android:background="#F9FFFFFF"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
