--- a/app/src/main/res/layout/item_ship.xml
+++ b/app/src/main/res/layout/item_ship.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp"
-    >
+    app:cardBackgroundColor="#FFFFFF"
+    app:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp">
+        android:layout_margin="4dp"
+        android:background="#00FF5D5D"
+        android:backgroundTint="#00FF0000">
 
 
         <TextView
@@ -27,6 +29,7 @@
             android:id="@+id/viewImgShip"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:contentDescription="@string/descriptorImage"
             app:srcCompat="@android:drawable/ic_delete" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
