--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -6,28 +6,48 @@
     android:layout_height="match_parent"
     tools:context=".Calculator">
 
-    <ScrollView
+    <LinearLayout
+        android:id="@+id/selectShip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/btnSelectSip"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="selectButton"
+            android:text="@string/btnSelectShip" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/weapon"
+        android:layout_width="408dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/selectShip">
+
+        <Button
+            android:id="@+id/btnSelectWeapon"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_weight="1"
+            android:onClick="selectWeapon"
+            android:text="Button" />
+    </LinearLayout>
 
-            <TextView
-                android:id="@+id/viewLblDownload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/btnDownload" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:onClick="selectButton"
-                android:text="@string/btnDD" />
-
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="76dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/weapon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
