--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -10,8 +10,9 @@
         android:id="@+id/selectShip"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="3dp"
         android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
@@ -26,7 +27,7 @@
         android:id="@+id/weapon"
         android:layout_width="408dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="12dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectShip">
@@ -37,17 +38,35 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:onClick="selectWeapon"
-            android:text="Button" />
+            android:text="@string/btnSelectWeapon" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="76dp"
-        android:text="TextView"
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="593dp"
+        android:layout_marginTop="12dp"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weapon" />
+        app:layout_constraintTop_toBottomOf="@+id/weapon">
+
+        <TextView
+            android:id="@+id/viewLblEnhance"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:letterSpacing="0.035"
+            android:text="@string/lblEnhance"
+            android:textSize="24sp"
+            android:textStyle="bold|italic" />
+
+        <SeekBar
+            android:id="@+id/viewSldEnhance"
+            style="@style/Widget.AppCompat.SeekBar.Discrete"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:max="10"
+            android:progress="0" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
