--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="carrier_method"
+            android:enabled="false"
             android:text="@string/btnCV" />
 
     </LinearLayout>
